pretend/tests/builds/generics.stderr
error: Failed to generate pretend implementation
 --> $DIR/generics.rs:6:7
  |
6 | trait Test {
  |       ^^^^

error: Generics are not supported
 --> $DIR/generics.rs:8:20
  |
8 |     async fn test_1<T>(&self) -> Result<()>;
  |                    ^^^

error: Generics are not supported
  --> $DIR/generics.rs:11:5
   |
11 | /     where
12 | |         Self: Sized;
   | |___________________^
